--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "data-storage-node"
-description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk."
+description = "Data Storage Node"
 version = "0.0.0"
 license = "MIT-0"
 authors.workspace = true
@@ -20,7 +20,7 @@ futures = "0.3.28"
 serde_json = { workspace = true, default-features = true }
 
 # Local
-parachain-template-runtime = { path = "../runtime" }
+data-storage-runtime = { path = "../runtime" }
 
 # Substrate
 frame-benchmarking = { workspace = true }
@@ -80,14 +80,14 @@ runtime-benchmarks = [
 	"cumulus-primitives-core/runtime-benchmarks",
 	"frame-benchmarking-cli/runtime-benchmarks",
 	"frame-benchmarking/runtime-benchmarks",
-	"parachain-template-runtime/runtime-benchmarks",
+	"data-storage-runtime/runtime-benchmarks",
 	"polkadot-cli/runtime-benchmarks",
 	"polkadot-primitives/runtime-benchmarks",
 	"sc-service/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
-	"parachain-template-runtime/try-runtime",
+	"data-storage-runtime/try-runtime",
 	"polkadot-cli/try-runtime",
 	"sp-runtime/try-runtime",
 ]
